[package]
name = "apricot-client"
version = "0.9.1"
description = "Apricot client"
authors = ["yhou@apricot.one"]
edition = "2018"
license = "MIT"
keywords = ["apricot", "defi", "solana"]
homepage = "https://apricot.one"
repository = "https://github.com/Apricot-Finance/apricot-client"


[dependencies]
solana-program = "=1.7.1"
spl-token = { version = "3.1.0", features = [ "no-entrypoint" ] }

[lib]
crate-type = ["cdylib", "lib"]
