[package]
name = "samples-rust-client"
version = "0.2.0"
authors = ["Yaniv <yhou@apricot.one>"]
edition = "2018"

[dependencies]
solana-sdk = "^1.7.1"
solana-client = "^1.7.1"
apricot-client = "0.14.0"
spl-token = { version = "3.1.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = "^1.0.2"
