[package]
name = "apricot-client-contract-demo"
version = "0.1.0"
description = "Apricot client demo contract"
authors = ["yhou@apricot.one"]
edition = "2018"


[dependencies]
solana-program = "^1.7.1"
apricot-client = "0.14.0"
spl-token = { version = "3.1.0", features = [ "no-entrypoint" ] }

[lib]
crate-type = ["cdylib", "lib"]
