[package]
name = "apricot-client-contract-demo"
version = "0.1.0"
description = "Apricot client demo contract"
authors = ["yhou@apricot.one"]
edition = "2018"


[dependencies]
solana-program = "=1.7.1"
spl-token = { version = "3.1.0", features = [ "no-entrypoint" ] }

[lib]
crate-type = ["cdylib", "lib"]
